--- a/Memoize.html
+++ b/Memoize.html
@@ -4,30 +4,33 @@
     <meta charset="UTF-8">
     <title>Memoize</title>
     <script>
-        function factorial(n){
+        var fact =function (n){
             if(n <1) return 1;
-            return n*factorial(n-1)
+            return n*fact(n-1)
 
         }
-        console.log(factorial(5))
-        console.log(factorial(10))
+
         function memoize(fn){
             var cache ={
             }
 
-            return function(){
-                var args = Array.prototype.slice.call(arguments, fn.arguments)
-                var hash='';
-                args.forEach(function(x){
-                    hash+= x.toString()
-                })
+            return function() {
+                var args = Array.prototype.slice.call(arguments)
 
-                if(typeof cache[hash] === 'undefined'){
+
+                var hash = args.reduce(function (hash, curr) {
+                    hash += (curr === Object(curr)) ? JSON.stringify(curr) : curr;
+                    return hash;
+                }, '');
+
+
+                if (typeof cache[hash] === 'undefined') {
                     console.log('not in cache')
-                    cache[hash]=fn.apply(this, args)
-
+                    cache[hash] = fn.apply(null, args);
                 }
 
+
+                console.log(cache)
                 return cache[hash]
 
             }
@@ -36,9 +39,16 @@
         }
 
 
-        var fact_mem = memoize(factorial)
+        var fact_mem = memoize(function(n){
+            if(n <1) return 1;
+            return n*fact_mem(n-1)
+
+        })
+
+
         console.log(fact_mem(5))
         console.log(fact_mem(5))
+
         console.log(fact_mem(10))
     </script>
 </head>
